--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/supabase-js": "^2.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
